# my-sql-db

./: .env.example  .gitignore  Cargo.toml  readme.md
benches/: sql_bench.rs
help/: 00-rust.md
help/00-Rust/: 01-Test.md  02-Cloc.md
help/01-BasicStructure/: 01-BasicStructure.md  02-Lexer.md  02.5-ExplanationOfLexer.md  03-Parser.md  04-Planner.md  05-Executor.md  06-SQLEngine.md  07-MemStorage.md  08-ExecSQL.md
help/02-DiskStorage/: 01-Introduction.md  02-Bitcask.md  03-Startup+Cleanup.md  04-Iter+Tests.md
help/02-DiskStorage/Bitcask-intro/: intro.md
help/03-Transaction/: 01-Introduction.md  02-Begin+Write.md  03-Commit+Rollback+Read.md  04-Intro-KeyEncode.md  05-KeyEncode.md  06-KeyDecode.md  07-Scan+Tests.md
help/04-SQLs/: 01-PrimaryKey.md  02-Update.md  03-Delete.md  04-DML_Tests.md  05_OrderBy.md  06-Limit+Offset.md  07-Projection.md  08.1-Join.md  08.2-CrossJoin.md  10-Filter.md  11-DropTable.md  12-Flush.md
help/04-SQLs/08-Join/: 08.1-Join.md  08.2-CrossJoin.md  08.3-Inner+OuterJoin.md
help/04-SQLs/09-Aggregate/: 09.1-Count+Max+Min+Sum+Avg.md  09.2-GroupBy.md  09.3-Having.md
help/05-CMD/: 01-Tokio.md  02-Server.md  03-Client.md  04-CommandLine.md  05-CommandLine_Improvement.md  06-TableCMD.md  07-TransactionCMD.md  08-FixBug.md
help/06-Optimize/: 01-Index.md  02-HashJoin.md  02-SelectIndex.md  03-Explain.md  04-CalculateExpression.md  05-AIrecommend.md  06-Benchmark.md
help/06-Optimize/01-Index/: 01.1-Index.md  (+2 more)
src/: error.rs
src/sql/: mod.rs  schema.rs
src/storage/: disk.rs  engine.rs  keyencode.rs  memory.rs  mod.rs  mvcc.rs
(+16 files in other folders)
