[package]
name = "my-sql-db"
version = "0.1.0"
edition = "2021"

[[bench]]
name = "sql_bench"
harness = false

[dependencies]
bincode = "1.3.3"
serde = { version = "1.0", features = ["derive"] }
fs4 = "0.8.4"
serde_bytes = "0.11.15"
tempfile = "3.12.0"
tokio = { version = "1.41.1", features = ["full"] }
tokio-util = { version = "0.7.12", features = ["full"] }
tokio-stream = "0.1.16"
futures = "0.3.31"
bytes = "1.0.0"
rustyline = "15.0.0"
dirs = "4.0"
strum = "0.24"
strum_macros = "0.24"
colored = "2.0"
dotenv = "0.15"
reqwest = { version = "0.11", features = ["json"] }
serde_json = "1.0"
criterion = "0.5"